--- a/packages/Webkul/Admin/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/app.scss
@@ -120,7 +120,7 @@ body {
 
             &.active {
                 a {
-                    color: #0041ff;
+                    color: #cf000f;
                 }
             }
         }
