--- a/packages/Webkul/Shop/src/Resources/assets/sass/_variables.scss
+++ b/packages/Webkul/Shop/src/Resources/assets/sass/_variables.scss
@@ -4,7 +4,7 @@ $font-color: #242424;
 $border-color: #C7C7C7;
 $brand-color: #0031F0;
 $font-color-light: #A5A5A5;
-$link-color: #2650EF;
+$link-color: #cf000f;
 $background-color: #F2F2F2;
 $dark-background: #121212;
 $disc-price: #FF6472;
